# glheadless

source/: CMakeLists.txt
source/glheadless/source/: AbstractImplementation.h
source/glheadless/source/cgl/: Implementation.cpp
